created basic html structure of page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
 
         </div>
     </div>
+    <div class="gameContainer">
+        <div class="tic_tac_toe_cell"></div>
+        <div class="tic_tac_toe_cell"></div>
+        <div class="tic_tac_toe_cell"></div>
+        <div class="tic_tac_toe_cell"></div>
+        <div class="tic_tac_toe_cell"></div>
+        <div class="tic_tac_toe_cell"></div>
+        <div class="tic_tac_toe_cell"></div>
+        <div class="tic_tac_toe_cell"></div>
+        <div class="tic_tac_toe_cell"></div>
+    </div>
+
+
+
+    <div class="lowerMostText">
+        copyright &copy; 2023 c-o-d-e-y-o-d-a <img src="" alt="" id="github-icon">
+    </div>
     
 
 
