--- a/index.html
+++ b/index.html
@@ -13,25 +13,28 @@
 
         </div>
     </div>
-    <div class="gameContainer">
-        <div class="tic_tac_toe_cell">0</div>
-        <div class="tic_tac_toe_cell">1</div>
-        <div class="tic_tac_toe_cell">2</div>
-        <div class="tic_tac_toe_cell">3</div>
-        <div class="tic_tac_toe_cell">4</div>
-        <div class="tic_tac_toe_cell">5</div>
-        <div class="tic_tac_toe_cell">6</div>
-        <div class="tic_tac_toe_cell">7</div>
-        <div class="tic_tac_toe_cell">8</div>
-    </div>
-    <div class="score">
-        <div class="player1">
-            <div class="playerScore">0</div>
-
+    
+    <div class="restOfThePage">
+        <div class="gameContainer">
+            <div class="tic_tac_toe_cell">O</div>
+            <div class="tic_tac_toe_cell">X</div>
+            <div class="tic_tac_toe_cell">O</div>
+            <div class="tic_tac_toe_cell">X</div>
+            <div class="tic_tac_toe_cell">O</div>
+            <div class="tic_tac_toe_cell">X</div>
+            <div class="tic_tac_toe_cell">X</div>
+            <div class="tic_tac_toe_cell">O</div>
+            <div class="tic_tac_toe_cell">O</div>
         </div>
-        <div class="player2">
-            <div class="playerScore">
-                0
+        <div class="score">
+            <div class="player1">
+                <div class="playerScore">0</div>
+    
+            </div>
+            <div class="player2">
+                <div class="playerScore">
+                    0
+                </div>
             </div>
         </div>
     </div>
