--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
     
     <div class="restOfThePage">
         <div class="gameContainer">
-            <div class="tic_tac_toe_cell">O</div>
-            <div class="tic_tac_toe_cell">X</div>
-            <div class="tic_tac_toe_cell">O</div>
-            <div class="tic_tac_toe_cell">X</div>
-            <div class="tic_tac_toe_cell">O</div>
-            <div class="tic_tac_toe_cell">X</div>
-            <div class="tic_tac_toe_cell">X</div>
-            <div class="tic_tac_toe_cell">O</div>
-            <div class="tic_tac_toe_cell">O</div>
+            <div class="tic_tac_toe_cell" id="cell0">O</div>
+            <div class="tic_tac_toe_cell" id="cell1">X</div>
+            <div class="tic_tac_toe_cell" id="cell2">O</div>
+            <div class="tic_tac_toe_cell" id="cell3">X</div>
+            <div class="tic_tac_toe_cell" id="cell4">O</div>
+            <div class="tic_tac_toe_cell" id="cell5">X</div>
+            <div class="tic_tac_toe_cell" id="cell6">X</div>
+            <div class="tic_tac_toe_cell" id="cell7">O</div>
+            <div class="tic_tac_toe_cell" id="cell8">O</div>
         </div>
         <div class="score">
             <div class="player1">
-                <div class="playerScore">0</div>
+                <div class="playerScore">player one: 0</div>
     
             </div>
             <div class="player2">
                 <div class="playerScore">
-                    0
+                    player two: 0
                 </div>
             </div>
         </div>
