worked on the js part,centered a bunch of divs

--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
     
     <div class="restOfThePage">
         <div class="gameContainer">
-            <div class="tic_tac_toe_cell" id="cell0">O</div>
-            <div class="tic_tac_toe_cell" id="cell1">X</div>
-            <div class="tic_tac_toe_cell" id="cell2">O</div>
-            <div class="tic_tac_toe_cell" id="cell3">X</div>
-            <div class="tic_tac_toe_cell" id="cell4">O</div>
-            <div class="tic_tac_toe_cell" id="cell5">X</div>
-            <div class="tic_tac_toe_cell" id="cell6">X</div>
-            <div class="tic_tac_toe_cell" id="cell7">O</div>
-            <div class="tic_tac_toe_cell" id="cell8">O</div>
+            <div class="tic_tac_toe_cell" id="cell0">&nbsp;</div>
+            <div class="tic_tac_toe_cell" id="cell1">&nbsp;</div>
+            <div class="tic_tac_toe_cell" id="cell3">&nbsp;</div>
+            <div class="tic_tac_toe_cell" id="cell2">&nbsp;</div>
+            <div class="tic_tac_toe_cell" id="cell4">&nbsp;</div>
+            <div class="tic_tac_toe_cell" id="cell5">&nbsp;</div>
+            <div class="tic_tac_toe_cell" id="cell6">&nbsp;</div>
+            <div class="tic_tac_toe_cell" id="cell7">&nbsp;</div>
+            <div class="tic_tac_toe_cell" id="cell8">&nbsp;</div>
         </div>
         <div class="score">
             <div class="player1">
-                <div class="playerScore">player one: 0</div>
+                <div class="playerScore">Player one: 0</div>
     
             </div>
             <div class="player2">
                 <div class="playerScore">
-                    player two: 0
+                    Player two: 0
                 </div>
             </div>
         </div>
